Add additional page styling

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,17 @@
   <meta charset="UTF-8">
   <title>JS Betting Game</title>
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/typography.css">  
+  <link rel="stylesheet" href="css/layout.css">
+  <link rel="stylesheet" href="css/game.css">
+  <link rel="stylesheet" href="css/computer.css">
+  <link rel="stylesheet" href="css/player.css">
 </head>
 <body>
 
   <header class='site-header'>
     <div class="section-inner">
-      
+      <h1 class='site-title'>JS Betting Game</h1>
     </div>
   </header>  
 
