Layout fixes; Add restart option

--- a/app/index.html
+++ b/app/index.html
@@ -20,33 +20,96 @@
 
   <section class="computer">
     <div class="section-inner">
-      
+      <svg class='computer-avatar' width="200" height="200" viewPort="0 0 200 200" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <ellipse cx="100" cy="100" rx="100" ry="100"/>
+        <ellipse cx="70" cy="90" rx="10" ry="10" fill='#000000'/>
+        <ellipse cx="130" cy="90" rx="10" ry="10" fill='#000000'/>
+        <line x1="70" y1="130" x2="130" y2="130" stroke="black" stroke-width="5"/>
+      </svg>
+
+      <svg class='chat-arrow' width="50" height="50" viewBox="-13 -14 50 50" xmlns="http://www.w3.org/2000/svg">
+        <polygon points='0,10 20,0 20,20'></polygon>
+      </svg>
     </div>    
   </section>
 
   <section id='game' class="game">
     <div class="section-inner">    
-      <div id='p1' class="player player-one">
-        <button>Click to Join</button>
+      <div id='p1' data-player='1' class="player player-one no-player">
+        <div class="no-player">
+          <label for="player-two-name">Name</label>
+          <input class='player-name' type="text" id='player-one-name'>
+          <button data-join='1' class='join-game'>Click to Join</button>
+        </div>
+
+        <div class='in-play'>
+          <h1 class="player-name"></h1>
+          <label for="p1-bet">bet</label>
+          <input type="number" id='p1-bet' class='bet'>
+
+          <label for="p1-guess">Guess</label>
+          <input type="password" pattern='[1-10]' id='p1-guess' class='guess'>
+        </div>
+        <div class="bankroll"></div>
       </div>
 
       <div id='gameboard' class="gameboard">
-        <button>Click to start</button>
+        <section class="state" data-state='1'>
+          <h1>No players have joined the game!</h1>
+        </section>
+
+        <section class="state" data-state='2'>
+          <h1>Players have joined!</h1>
+          <button class='start-game'>Click to start</button>
+        </section>
+
+        <section class="state" data-state='3'>
+          <h1>I have a number! Make a bet and take a guess!</h1>
+          <button class='play-turn'>Try your luck</button>
+        </section>
+
+        <section class="state" data-state='4'>
+          <h1>My number was <span class='answer'></span>!</h1>
+          <button class='show-result'>Next</button>
+        </section>
+
+        <section class="state" data-state='5'>
+          <h1><span class="player-guess">!!!</h1>
+          <button class='restart-game'>Play again?</button>
+        </section>              
       </div>
 
-      <div id='p2' class="player player-two">
-        <button>Click to Join</button>
+      <div id='p2' data-player='2' class="player player-two no-player">
+        <div class="no-player">
+          <label for="player-two-name">Name</label>
+          <input class='player-name' type="text" id='player-two-name'>
+          <button data-join='2' class='join-game'>Click to Join</button>
+        </div>
+
+        <div class='in-play'>
+          <h1 class="player-name"></h1>
+          <label for="p1-bet">bet</label>
+          <input type="number" id='p1-bet' class='bet'>
+
+          <label for="p1-guess">Guess</label>
+          <input type="password" pattern='[1-10]' id='p1-guess' class='guess'>
+        </div>
+        <div class="bankroll"></div>
       </div>
     </div>
 
   </section>
 
   <footer class='site-footer'>
-    <div class="section-inner">
-      
+    <div class="section-inner"> 
+
     </div>    
   </footer>
 
   <script src="js/jquery.js"></script>
+  <script src='js/computer.js'></script>
+  <script src='js/player.js'></script>
+  <script src='js/gameboard.js'></script>
+  <script src='js/app.js'></script>
 </body>
 </html>
